fixed some responsivness issues on smaller display

--- a/app.css
+++ b/app.css
@@ -41,14 +41,6 @@ body.json_documenter h1 .titleText{
     font-size:30px;
 }
 
-body.json_documenter h1 .fa-file-alt
-{
-    color:white !important;
-    font-size: 30px;
-    position: relative;
-    left: 80%;
-}
-
 body.json_documenter h1 .fas:hover{
     cursor:pointer;
 }
@@ -392,8 +384,39 @@ body.json_documenter .card-header
     color:white;
     border-top-left-radius: 25px;
     border-top-right-radius: 0;
-    width:101%;
 }
+
+body.json_documenter h1 .fa-file-alt
+{
+    color:white !important;
+    font-size: 30px;
+    position: relative;
+}
+
+
+@media only screen and (max-width:750px) {
+    body.json_documenter .card-header {
+        width:100.5%;
+    }
+    body.json_documenter h1 .fa-file-alt
+    {
+        left: 65%;
+    }
+}
+
+@media only screen and (min-width:751px) {
+    body.json_documenter .card-header {
+        width:101%;
+    }
+    body.json_documenter h1 .fa-file-alt
+    {
+        left: 80%;
+    }
+}
+
+
+
+
 
 body.json_documenter .descriptionLabel{
     color:black;
